--- a/react-multi-page-website/src/index.css
+++ b/react-multi-page-website/src/index.css
@@ -11,3 +11,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.car-service {
+width: 200px;
+}
